# rarust-oopsla25

./: LICENSE  README.md  benchmark.result  clean.sh  coincbc.sh  dockerfile  reproduce.sh
charon/: Makefile
charon/charon/macros/src/: lib.rs
charon/charon/src/: export.rs  expressions.rs  gast.rs  gast_utils.rs  id_map.rs  id_vector.rs  insert_assign_return_unit.rs  llbc_ast.rs  meta.rs  names.rs  reorder_decls.rs  translate_ctx.rs  translate_functions_to_ullbc.rs  types.rs  values.rs  values_utils.rs
evaluation/: RaRustInFlux.rs
evaluation/benchmark/: Cargo.toml  benchmark.llbc
evaluation/benchmark/src/: eval.rs  main.rs  types.rs
evaluation/rrlib/: Cargo.toml
evaluation/rrlib/src/: lib.rs
rarust/: Cargo.toml
rarust/src/: enrich.rs  functions.rs  llbc.rs  lp.rs  main.rs  printer.rs  rich_type.rs  scc.rs  subtyping.rs  typ_ctx.rs  typing.rs
