[package]
name = "rarust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
charon = { path="../charon/charon" }
serde = "1.0.195"
serde_json = {version="1.0.111", features=["unbounded_depth"]}
good_lp = "1.7.0"
im = "15.1.0"
serde_stacker = "0.1.11"
